# Feather-Tui

./: .gitignore  Cargo.toml  README.md
src/: callback.rs  container.rs  document.rs  error.rs  input.rs  lib.rs  list.rs  main.rs  menu.rs  renderer.rs  selector.rs  terminal.rs  trigger.rs
src/components/: header.rs  mod.rs  option.rs  selector.rs  seperator.rs  text.rs
src/container/: container.rs  document.rs  list.rs  message.rs  mod.rs
src/containers/: container.rs  custom.rs  document.rs  general.rs  list.rs  message.rs  mod.rs
src/termui/: callback.rs  container.rs  errmsg.rs  input.rs  menu.rs  mod.rs  renderer.rs  selector.rs  trigger.rs
src/termui/components/: header.rs  mod.rs  option.rs  text.rs
src/termui/util/: ansi.rs
src/util/: ansi.rs  color.rs  dimension.rs  id.rs  mod.rs  mom.rs  number.rs  shape.rs  traits.rs  turtle.rs
src/util/geometry/: circle.rs  core.rs  linalg.rs  line.rs  mod.rs  point.rs  rectangle.rs  shape.rs  turtle.rs
