[package]
name = "feather-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A crate for building simple terminal-based user interfaces."
homepage = "https://github.com/Nongtajkrub/termui"
repository = "https://github.com/Nongtajkrub/termui"
readme = "README.md"
keywords = ["tui", "user_interface", "ui", "terminal", "cli", "lightweight", "simple"]

[dependencies]
bitflags = "2.9.0"
crossterm = "0.28.1"
