[package]
name = "feather-tui"
version = "5.0.0-rc.1"
edition = "2024"
license = "Apache-2.0"
description = "A crate for building simple terminal-based user interfaces."
homepage = "https://github.com/Nongtajkrub/termui"
repository = "https://github.com/Nongtajkrub/termui"
readme = "README.md"
keywords = ["user_interface", "ui", "terminal", "cli", "simple"]

[features]
default = []

[dependencies]
bitflags = "2.9.0"
crossterm = "0.28.1"
thiserror = "2.0.12"
unicode-segmentation = "1.12.0"
